# x-research

./: main.py  pyproject.toml
src/accidentes_rd_2025/: analysis.ipynb
src/depreciacion_vehiculos/: analysis.ipynb
src/devaluacion_monetaria_2025/: analysis.ipynb
