[project]
name = "x-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "seaborn>=0.13.2",
    "yahoofinancials>=1.20",
    "yfinance>=1.1.0",
]
